--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "next": "^15.1.6",
     "react": "^19.0.0",
