--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "dotenv": "^16.4.7",
-    "ethers": "5.8.0",
+    "ethers": "^6.13.5",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
